Fixed overflow on webpage load

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,8 @@ body,
   margin: 0;
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 body {
