--- a/src/Content/Content.css
+++ b/src/Content/Content.css
@@ -1,3 +1,4 @@
 .main-content {
     padding: 0rem 2rem;
+    flex-grow: 1;
 }
